<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="quilometro_por_litro">Quilômetro por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">calcular</string>
    <string name="preencha_todos_campos">Preencha todos campos</string>
    <string name="informa_valor_valido">Por favor, informa valores válidos</string>
</resources>
